Edited rich notifications

--- a/playground/popup.html
+++ b/playground/popup.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
-<body>
-<h1>hi</h1>
-<input id="userinput"></input>
+<head>
+
+</head>
+    <body>
+<!--<img id ="imageOne" src ="button_on.png" onclick="changeColor()"/>-->
+	</body>
 <script src="script.js"></script>
-</body>
 </html>
