--- a/playground1/popup.html
+++ b/playground1/popup.html
@@ -1,27 +1,16 @@
-<!DOCTYPE html>
 <html>
 <head>
-</head>
-    <body>
-	
+ </head>
 
-<img id="myImg" src="button_on.png"  width="107" height="98">
+<body >
+<div class="top_bar" id="nav" style=" color:white; background:#444;	padding:1px;
+margin-top:-8px; margin-bottom:6px;">Anti Phishing Toolkit</div>
+<img src="button_on.png" style="width:80px;height:80px;margin-left:15px";>
+<div is="url" style="margin-top:15px;margin-left:18px;margin-right:16px;">url_placeolder</div>
+<div is="proto" style="margin-top:1px;margin-left:12px; margin-right:16px;">proto_placehlder</div>
 
+<a href="popup2.html" style="margin-left:6px; margin-bottom:-10px;" >Advanced Options</a>
 
-
-<script>
-
-document.getElementById("myImg").onclick = function() {myFunction()};
-
-function myFunction() {
-  document.getElementById("myImg").src="button_off.png";
   
-  
-
-
-</script>
-
-
-	</body>
-
+</body>
 </html>
