initial version of extension

--- a/playground1/popup.html
+++ b/playground1/popup.html
@@ -6,8 +6,8 @@
 <div class="top_bar" id="nav" style=" color:white; background:#444;	padding:1px;
 margin-top:-8px; margin-bottom:6px;">Anti Phishing Toolkit</div>
 <img src="button_on.png" style="width:80px;height:80px;margin-left:15px";>
-<div is="url" style="margin-top:15px;margin-left:18px;margin-right:16px;">url_placeolder</div>
-<div is="proto" style="margin-top:1px;margin-left:12px; margin-right:16px;">proto_placehlder</div>
+<div is="" style="margin-top:15px;margin-left:18px;margin-right:16px;">url_placeolder</div>
+<div is="" style="margin-top:1px;margin-left:12px; margin-right:16px;">proto_placehlder</div>
 
 <a href="popup2.html" style="margin-left:6px; margin-bottom:-10px;" >Advanced Options</a>
 
